# jan

./: .gitignore  Makefile  package.json  vitest.config.ts
.github/workflows/: jan-electron-linter-and-test.yml  jan-tauri-build-agent-nightly.yaml  manual-release-dependency-tarballs.yml  template-cli-build-linux-x64.yml  template-cli-build-macos.yml  template-cli-build-windows-x64.yml
docs/: package.json
electron/: package.json
extensions/assistant-extension/: package.json
extensions/conversational-extension/: package.json
extensions/download-extension/: package.json
extensions/llamacpp-extension/: package.json  settings.json
extensions/mlx-extension/: package.json  rolldown.config.mjs  settings.json
extensions/rag-extension/: package.json
extensions/vector-db-extension/: package.json
mlx-server/: Package.swift
server/: package.json
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  (+1 more)
src-tauri/plugins/tauri-plugin-websearch/: Cargo.toml  build.rs  package.json
src-tauri/plugins/tauri-plugin-websearch/guest-js/: index.ts  types.ts
src-tauri/plugins/tauri-plugin-websearch/permissions/: default.toml
src-tauri/plugins/tauri-plugin-websearch/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-websearch/src/: commands.rs  lib.rs  provider.rs
web/: package.json  tsconfig.json
web-app/: package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+250 files in other folders)
